Now able to complete the test/test_win32ole.rb unit tests, but most are still failing.

--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="examples"/>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="lib" path="lib/jacob.jar"/>
-	<classpathentry kind="lib" path="lib/jwin32ole.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JRuby"/>
+	<classpathentry kind="lib" path="lib/jacob.jar" sourcepath="/jacob/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
